# azureopenai-langchain1

./: .env.template  .gitignore  README.md  poe_tasks.toml  pyproject.toml
src/azureopenai_langchain1/: __init__.py  agent1.py  agent1e.py  ex0.py  ex1.py  ex1debug.py  ex1s.py  ex2.py  ex2b.py  ex2debug.py  ex2e.py  ex2js.py  ex2s.py  ex2t.py  ex2z.py  ex2zs.py  llm_callback.py
