[project]
name = "azureopenai-langchain1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Masato Ota", email = "ohtam@nec.com" },
]
requires-python = ">=3.12"
dependencies = [
  "langchain[openai]>=0.3.26",
  "langgraph>=0.5.4",
  "openai>=1.96.1",
]

[project.scripts]
azureopenai-langchain1 = "azureopenai_langchain1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "langsmith>=0.4.6",
  "mypy>=1.17.0",
]
