[project]
name = "azureopenai-langchain1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Masato Ota", email = "ohtam@nec.com" },
]
requires-python = ">=3.12"
dependencies = [
  "langchain[openai]>=1.3.2",
  "langgraph>=1.1.10",
  "openai>=2.40.0",
]

[project.scripts]
azureopenai-langchain1 = "azureopenai_langchain1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "langsmith>=0.8.9",
  "mypy>=2.1.0",
]
